frontend/styles.css
.chart-container {
    display: block;
    width: 1350px;
    height: 600px;
}

body {
    padding: 20px;
    margin: 5px 0 22px 0;
    background-color: rgba(123, 175, 212, 0.8);
    text-align: center;
    color: rgb(255, 255, 255);
    line-height: 30px;
    z-index: 2;
    visibility: visible;
    opacity: 1;
    transition: all 0.3s ease 0s;
    font-family: apercu, sans-serif;
    font-size: 26px;
    font-style: normal;
    font-weight: 300;
    white-space: normal;
    word-spacing: 0px;
    display: inline-block;
}

button {
    font-family: apercu, sans-serif;
    font-size: 14px;
    font-style: normal;
    font-weight: 300;
    white-space: normal;
    word-spacing: 0px;
}

.container {
    padding: 60px;
    background: #4B9CD3;
    margin: 0 650px 0 650px;
    border-radius: 40%;
}

.bigboi {
    font-weight: bold;
    font-size: 46px;
    color: #000080;
    word-spacing: 5px;
}

